--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ cache: pip
 sudo: false
 
 python:
-    - 3,5
+    - 3.5
     - 3.6
 
 before_install:
@@ -11,7 +11,7 @@ before_install:
 
 install:
     - pip install -U pip
-    - pip install -U aiohttp, pytest
+    - pip install -U aiohttp pytest
 
 script:
     - pytest
