--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: python
-cache: pip
-sudo: false
 
 python:
     - 3.5
@@ -12,6 +10,7 @@ before_install:
 install:
     - pip install -U pip
     - pip install -U aiohttp pytest
+    - python setup.py install
 
 script:
-    - pytest
+    - pytest tests
